--- a/index.html
+++ b/index.html
@@ -98,10 +98,25 @@
                         <div class = "feature-banner">
                             <div class = "feature-banner-content-div">
                                 <div class = "feature-content">
+                                    <!--
                                     <p>&#128205 Bellevue, Washington</p>
                                     <p>&#129309 Founded 2020</p>
                                     <p>&#127942 Four-Time Inspire Winners @ WA Champs</p>
-                                    <p>&#129321 2024 Worlds Motivate Award</p>
+                                    <p>&#129321 2024 Worlds Motivate Award</p>-->
+                                    <div class="w-layout-grid title-grid">
+                                        <div class="tagline-div">
+                                            <h2 class="heading-tagline">CLASSROOM&nbsp;INTEGRATION</h2>
+                                        </div><div class="heading-wrapper-div white">
+                                        <h2 class="heading-style-h2">Bring the classroom to life</h2>
+                                    </div>
+                                        <div class="paragraph-wrapper white"><p>DECA is an integral component of classroom instruction providing classroom teachers with enriching educational programs and resources to enhance learning.</p>
+                                        </div>
+                                        <div class="button-wrapper top-padding">
+                                            <a href="/classroom" class="button is-link is-icon is-white w-inline-block">
+                                                <div>Learn more</div>
+                                                <div class="icon-embed-xsmall w-embed">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--heroicons" width="100%" height="100%" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24">
+                                                        <path fill="currentColor" fill-rule="evenodd" d="M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75s9.75-4.365 9.75-9.75S17.385 2.25 12 2.25Zm4.28 10.28a.75.75 0 0 0 0-1.06l-3-3a.75.75 0 1 0-1.06 1.06l1.72 1.72H8.25a.75.75 0 0 0 0 1.5h5.69l-1.72 1.72a.75.75 0 1 0 1.06 1.06l3-3Z" clip-rule="evenodd"></path></svg></div></a></div></div>
                                 </div>
                                 <div class = "feature-banner-image-div">
                                     <img src="images/2024teamphoto.jpg" alt = "bg-image"/>
