--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
                     <div class = "text">
                     <h1 style = "font-size:60px;padding-top:20px;margin-bottom:5px;">ABOUT US</h1>
                     <section style="font-size:20px;">
+
+                        <div class = "inner-section-grid">
+                        <div class = "container">
                         <div class = "feature-banner">
                             <div class = "feature-banner-content-div">
                                 <div class = "feature-content">
@@ -124,6 +127,9 @@
                                 </div>
                             </div>
                         </div>
+                        </div>
+                        </div>
+
                         <p> Hello! We are FIRST Tech Challenge (FTC) Team 18225 High Definition. <b>Our mission</b> is to promote STEM and FIRST within our
                         community, inspiring and planting seeds for the next generation of innovators to solve challenges of the
                         future! We spread mechanical, programming, business, and other practices within the
