--- a/index.html
+++ b/index.html
@@ -92,54 +92,38 @@
                 <!--<div class = table3>
                 <img src="images/aboutus.png" alt = "Team Photos - About Us" style="position:static;top:50px;left:10px;padding:30px;width:100%;"/>
                 </div>-->
-                    <div class = "text">
-                    <h1 style = "font-size:60px;padding-top:20px;margin-bottom:5px;">ABOUT US</h1>
-                    <section style="font-size:20px;">
-
-                        <div class = "inner-section-grid">
-                        <div class = "container">
+                <div class = "text">
+                <h1 style = "font-size:60px;padding-top:20px;margin-bottom:5px;">ABOUT US</h1>
+                <div class = "inner-section-grid">
+                    <div class = "container">
                         <div class = "feature-banner">
                             <div class = "feature-banner-content-div">
                                 <div class = "feature-content">
-                                    <!--
-                                    <p>&#128205 Bellevue, Washington</p>
-                                    <p>&#129309 Founded 2020</p>
-                                    <p>&#127942 Four-Time Inspire Winners @ WA Champs</p>
-                                    <p>&#129321 2024 Worlds Motivate Award</p>-->
                                     <div class="w-layout-grid title-grid">
-                                        <div class="tagline-div">
-                                            <h2 class="heading-tagline">CLASSROOM&nbsp;INTEGRATION</h2>
-                                        </div><div class="heading-wrapper-div white">
-                                        <h2 class="heading-style-h2">Bring the classroom to life</h2>
+                                        <section style="font-size:20px;">
+                                            <p>&#128205 Bellevue, Washington</p>
+                                            <p>&#129309 Founded 2020</p>
+                                            <p>&#127942 Four-Time Inspire Winners @ WA Champs</p>
+                                            <p>&#129321 2024 Worlds Motivate Award</p>
+                                        </section>
                                     </div>
-                                        <div class="paragraph-wrapper white"><p>DECA is an integral component of classroom instruction providing classroom teachers with enriching educational programs and resources to enhance learning.</p>
-                                        </div>
-                                        <div class="button-wrapper top-padding">
-                                            <a href="/classroom" class="button is-link is-icon is-white w-inline-block">
-                                                <div>Learn more</div>
-                                                <div class="icon-embed-xsmall w-embed">
-                                                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--heroicons" width="100%" height="100%" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24">
-                                                        <path fill="currentColor" fill-rule="evenodd" d="M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75s9.75-4.365 9.75-9.75S17.385 2.25 12 2.25Zm4.28 10.28a.75.75 0 0 0 0-1.06l-3-3a.75.75 0 1 0-1.06 1.06l1.72 1.72H8.25a.75.75 0 0 0 0 1.5h5.69l-1.72 1.72a.75.75 0 1 0 1.06 1.06l3-3Z" clip-rule="evenodd"></path></svg></div></a></div></div>
-                                </div>
-
                                 <div class = "feature-banner-image-div">
                                 </div>
                             </div>
                         </div>
-                        </div>
-                        </div>
-
+                    </div>
+                    </div>
+                </div>
                         <p> Hello! We are FIRST Tech Challenge (FTC) Team 18225 High Definition. <b>Our mission</b> is to promote STEM and FIRST within our
                         community, inspiring and planting seeds for the next generation of innovators to solve challenges of the
                         future! We spread mechanical, programming, business, and other practices within the
                         community to ensure their success and make sure that no one is left behind.</p>
-                    </section>
-                </div>
             </div>
         </div>
+        </div>
     </div>
-</section>
-</div>
+    </section>
+
 
 
 
